[package]
name = "kms"
version = "0.3.1"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]
[dependencies]
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
curv = {path="../curv" ,version="*",default-features = false }
multi-party-ecdsa = {path="../multi-party-ecdsa" ,version="*" ,default-features = false }
centipede = {path="../centipede" ,version="*" ,default-features = false }
paillier = {path="../rust-paillier" ,version="*" ,default-features = false }
zk-paillier = {path="../zk-paillier" ,version="*" ,default-features = false }
